--- a/index.html
+++ b/index.html
@@ -29,3 +29,26 @@
             </div>
         </div>
     </div>
+    <!-------------------ABOUT----------------->
+    <div id = "about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/Media (2).jpg">
+                </div>
+                    <div class="about-col-2">
+                        <h1 class="sub-title">About me</h1>
+                        <p>I am a recent IT graduate(NQF LEVEL 7) from the Vaal University of Technology with expertise in cloud computing, networking, and web development, supported by hands-on experience through a prestigious job shadowing program at Roche South Africa. Proficient in VB.net, Java, PHP, SQL, and skilled in web development using HTML and CSS. Known for a proactive mindset, exceptional problem-solving abilities, and a commitment to personal and professional growth. Eager to contribute to innovative projects and thrive in dynamic environments.</p>
+                    
+                    <div class="tab-titles">
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('Experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('Education')">Education</p>
+                    </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>Web Developer</span><br>Designing Web Page</li>
+                            <li><span>skill 2</span><br>Designing Web Page</li>
+                            <li><span>skill 3</span><br>Designing Web Page</li>
+                        </ul>
+                    </div>
