--- a/index.html
+++ b/index.html
@@ -52,3 +52,24 @@
                             <li><span>skill 3</span><br>Designing Web Page</li>
                         </ul>
                     </div>
+                    <div class="tab-contents" id="Experience">
+                        <ul>
+                            <li><span>2024-CURRENT</span><br><h2>CAPACITI</h2></li>
+                            <P>Web Developer Intern</P>
+                            <li><span>2017-2019</span><br><h2>Roche South Africa</h2></li>
+                            <p>Job Shadowing</p>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="Education">
+                        <ul>
+                            <li><span>2024 - 2024</span><br><h1>Vaal University Of Technology</h1></li>
+                            <p>Advanced Diploma In Information Technology</p>
+                            <li><span>2021 - 2023</span><br><h1>Vaal University Of Technology</h1></li>
+                            <p>Diploma In Information Technology</p+>
+                            <li><span>2016 - 2020</span><br><h1>Umqhele Comprehensive School</h1></li>
+                            <P>Grade 12[Matric]</P>
+                        </ul>
+                    </div>
+            </div>
+        </div>
+    </div>
