--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Web Developer</span><br>Designing Web Page</li>
-                            <li><span>skill 2</span><br>Designing Web Page</li>
-                            <li><span>skill 3</span><br>Designing Web Page</li>
+                            <li><span>CSS</span><br>Designing Web Page</li>
+                            <li><span>HTMl</span><br>Designing Web Page</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Experience">
