--- a/index.html
+++ b/index.html
@@ -73,3 +73,36 @@
             </div>
         </div>
     </div>
+    <!----------------Portfolio------------>
+<div id="portfolio">
+    <div class="container">
+        <h1 class="sub-title">My Work</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/sky.avif">
+                <div class="layer">
+                    <h3>Solo</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti velit inventore delectus similique recusandae numquam nam cupiditate</p>
+                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> 
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/sky.avif">
+                <div class="layer">
+                    <h3>Salon</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti velit inventore delectus similique recusandae numquam nam cupiditate</p>
+                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> 
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/sky.avif">
+                <div class="layer">
+                    <h3>Solo</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti velit inventore delectus similique recusandae numquam nam cupiditate</p>
+                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> 
+                </div>
+            </div>
+        </div>
+        <a href="#" class="btn">See more</a>
+    </div>
+    </div>
