--- a/index.html
+++ b/index.html
@@ -103,6 +103,45 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <!-------------<a href="#" class="btn">See more</a>----------------->
+    </div>
+    </div>
+    <!---------------Contact----------------->
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-paper-plane"></i> isabellamonyeseala@gmail.com </p>
+                <p><i class="fa-solid fa-phone"></i> 0671632776</p>
+    
+                <div class="social-media-icons">
+                    <a href="http://www.linkedin.com/in/isabella-monyeseala-513b772a9" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/Isamonyeseala" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <a href="images/ISABELLA_MONYESEALA_2025 Candidate CV.docx" download class="btn btn2">Dowload CV</a>
+            </div>
+            <div class="contact-right">
+                <form name="submit-to-google-sheet">
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+                <span id="msg"></span>
+            </div>
+        </div>
+        <div class="iconbutton">
+            <a href="#header">
+                <!--Add the code here for the logo to appear and the icon to be actionable-->
+               
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" width="63px">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>Copyright © Isabella. With love❤️ give me a strawbell</p>
     </div>
     </div>
