--- a/index.html
+++ b/index.html
@@ -160,18 +160,18 @@
                 <h1 class="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="images/sky.avif">
+                        <img src="images/Isabella MON - Portfolio - Google Chrome 2025_02_17 10_24_41.png">
                         <div class="layer">
-                            <h3>Solo</h3>
+                            <h3>Coursera Portfolio</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti
                                 velit inventore delectus similique recusandae numquam nam cupiditate</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/sky.avif">
+                        <img src="images/clubbraids.png">
                         <div class="layer">
-                            <h3>Salon</h3>
+                            <h3>ClubBraids by Theodora</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti
                                 velit inventore delectus similique recusandae numquam nam cupiditate</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -187,7 +187,6 @@
                         </div>
                     </div>
                 </div>
-                <!-------------<a href="#" class="btn">See more</a>----------------->
             </div>
         </div>
         <!---------------Contact----------------->
