--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.2.png" class="logo">
+                <img src="imageS/logo3.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href='#'>Home</a> </li>
-                    <li><a href='#'>About</a> </li>
-                    <li><a href='#'>Projects</a> </li>
-                    <li><a href='#'>Contacts</a> </li>
+                    <li><a href='#header'>Home</a> </li>
+                    <li><a href='#about'>About</a> </li>
+                    <li><a href="#skills">Skills</a> </li>
+                    <li><a href='#projects'>Projects</a> </li>
+                    <li><a href='#contacts'>Contacts</a> </li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -204,8 +205,7 @@
                             <a href="https://github.com/Isamonyeseala" target="_blank"><i
                                     class="fa-brands fa-github"></i></a>
                         </div>
-                        <a href="images/ISABELLA_MONYESEALA_2025 Candidate CV.docx" download class="btn btn2">Dowload
-                            CV</a>
+                        <a href="images/ISABELLA_MONYESEALA_2025 Candidate CV.docx" download class="btn btn2">RESUME</a>
                     </div>
                     <div class="contact-right">
                         <form name="submit-to-google-sheet">
@@ -219,8 +219,6 @@
                 </div>
                 <div class="iconbutton">
                     <a href="#header">
-                        <!--Add the code here for the logo to appear and the icon to be actionable-->
-
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="white" width="63px">
                             <path stroke-linecap="round" stroke-linejoin="round"
