--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nthabiseng</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/0259f3d1fc.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="images/logo.2.png">
+    <link rel="icon" type="image/png" href="images/logo3.png">
 
 </head>
 
