--- a/index.html
+++ b/index.html
@@ -49,36 +49,35 @@
                         contribute to innovative projects and thrive in dynamic environments.</p>
 
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('Experience')">Experience</p>
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
                     </div>
                     <div class="tab-contents" id="Experience">
                         <ul>
                             <li><span>2024-CURRENT</span><br>
-                                <h2>CAPACITI</h2>
+                                <h4>CAPACITI</h4>
                             </li>
-                            <P>Web Developer Intern</P>
+                            <h6>Web Development Intern</h6>
                             <li><span>2017-2019</span><br>
-                                <h2>Roche South Africa</h2>
+                                <h4>Roche South Africa</h4>
                             </li>
-                            <p>Job Shadowing</p>
+                            <h6>Job Shadowing</h6>
                         </ul>
                     </div>
                     <div class="tab-contents" id="Education">
                         <ul>
                             <li><span>2024 - 2024</span><br>
-                                <h1>Vaal University Of Technology</h1>
+                                <h4>Vaal University Of Technology</h4>
                             </li>
-                            <p>Advanced Diploma In Information Technology</p>
+                            <h6>Advanced Diploma In Information Technology</h6>
                             <li><span>2021 - 2023</span><br>
-                                <h1>Vaal University Of Technology</h1>
+                                <h4>Vaal University Of Technology</h4>
                             </li>
-                            <p>Diploma In Information Technology</p>
-                                <li><span>2016 - 2020</span><br>
-                                    <h1>Umqhele Comprehensive School</h1>
-                                </li>
-                            <P>Grade 12[Matric]</P>
+                            <h6>Diploma In Information Technology</h6>
+                            <li><span>2016 - 2020</span><br>
+                                <h4>Umqhele Comprehensive School</h4>
+                            </li>
+                            <h6>Grade 12 [Matric]</h6>
                         </ul>
                     </div>
                 </div>
