--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://kit.fontawesome.com/0259f3d1fc.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="images/logo3.png">
 
+    <script src="script.js"></script>
+
 </head>
 
 <body>
@@ -180,7 +182,7 @@
                     <div class="work">
                         <img src="images/sky.avif">
                         <div class="layer">
-                            <h3>Solo</h3>
+                            <h3>Book Recommendation System</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti
                                 velit inventore delectus similique recusandae numquam nam cupiditate</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
