--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
                         <img src="images/Isabella MON - Portfolio - Google Chrome 2025_02_17 10_24_41.png">
                         <div class="layer">
                             <h3>Coursera Portfolio</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti
-                                velit inventore delectus similique recusandae numquam nam cupiditate</p>
+                            <p>This is the first ever portfolio i did on Coursera before completing the Web Dev course.</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -187,13 +186,18 @@
                         <img src="images/clubbraids.png">
                         <div class="layer">
                             <h3>ClubBraids by Theo</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In possimus et sunt a, deleniti
-                                velit inventore delectus similique recusandae numquam nam cupiditate</p>
+                            <p>This is a school project that i did with 4 other members, ClubBraids by Theodore offers
+                                professional braiding services for women, men, and children, including box braids,
+                                cornrows, twists, and personalized styles. The business emphasizes hair health with
+                                consultations and high-quality products. In addition to serving walk-in clients,
+                                Theodore provides mobile at-home services for added convenience. As demand has grown,
+                                improved tools are needed to manage appointments and maintain excellent customer
+                                service.</p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
-                        </div>
+            </div>
         </div>
 
         <!---------------Contact----------------->
@@ -237,7 +241,7 @@
                 <li><a href='#contact'>Contacts</a> </li>
             </ul>
             <p>© Isabella. With love❤️ give me a strawbell</p>
-            
+
             <div class="iconbutton">
                 <a href="#header">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -250,8 +254,9 @@
         </footer>
 
         <!-----Chatbot Created using BotPress-------->
-    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-    <script src="https://files.bpcontent.cloud/2025/02/19/07/20250219073027-NDM9UWYD.js"></script>
-        
-    </body>
+        <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+        <script src="https://files.bpcontent.cloud/2025/02/19/07/20250219073027-NDM9UWYD.js"></script>
+
+</body>
+
 </html>
