--- a/index.html
+++ b/index.html
@@ -47,25 +47,18 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About</h1>
-                    <p>I am a recent IT graduate(NQF LEVEL 7) from the Vaal University of Technology with expertise in
-                        cloud computing, networking, and web development, supported by hands-on experience through a
-                        prestigious job shadowing program at Roche South Africa. Proficient in VB.net, Java, PHP, SQL,
-                        and skilled in web development using HTML and CSS. Known for a proactive mindset, exceptional
-                        problem-solving abilities, and a commitment to personal and professional growth. Eager to
-                        contribute to innovative projects and thrive in dynamic environments.</p>
+                    <p>I am a recent IT graduate (NQF Level 7) from the Vaal University of Technology with a strong
+                        focus on web development. Skilled in HTML, CSS, and JavaScript, I have hands-on experience
+                        building and designing user-friendly web applications. My expertise is further supported by a
+                        prestigious job shadowing program at Roche South Africa. Additionally, I have knowledge in cloud
+                        computing and networking, allowing me to develop scalable and efficient solutions. Known for a
+                        proactive mindset, strong problem-solving abilities, and a commitment to continuous learning, I
+                        am eager to contribute to innovative projects and grow in dynamic environments.</p>
 
                     <div class="tab-titles">
-                        <!---------<p class="tab-links active-link" onclick="opentab('skills')">Skills</p>------------>
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
                         <p class="tab-links" onclick="opentab('Experience')">Experience</p>
                     </div>
-                    <!-----------<div class="tab-contents active-tab" id="skills">
-                        <ul>
-                            <li><span>Web Developer</span><br>Designing Web Page</li>
-                            <li><span>skill 2</span><br>Designing Web Page</li>
-                            <li><span>skill 3</span><br>Designing Web Page</li>
-                        </ul>
-                    </div>----------------->
                     <div class="tab-contents" id="Experience">
                         <ul>
                             <li><span>2024-CURRENT</span><br>
@@ -178,7 +171,8 @@
                         <img src="images/Isabella MON - Portfolio - Google Chrome 2025_02_17 10_24_41.png">
                         <div class="layer">
                             <h3>Coursera Portfolio</h3>
-                            <p>This is the first ever portfolio i did on Coursera before completing the Web Dev course.</p>
+                            <p>This is the first ever portfolio i did on Coursera before completing the Web Dev course.
+                            </p>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
