--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav>
             <div class="header-text">
                 <p><span>Web Developer</span></p>
-                <h1>Hello👋, My name is <span>ISABELLA</span><br>welcome to my portfolio.</h1>
+                <h1>Hello👋,Welcome<br>My name is <span>ISABELLA</span></h1>
             </div>
         </div>
     </div>
