--- a/index.html
+++ b/index.html
@@ -183,9 +183,16 @@
                                 professional braiding services for women, men, and children, including box braids,
                                 cornrows, twists, and personalized styles. The business emphasizes hair health with
                                 consultations and high-quality products. In addition to serving walk-in clients,
-                                Theodore provides mobile at-home services for added convenience. As demand has grown,
-                                improved tools are needed to manage appointments and maintain excellent customer
-                                service.</p>
+                                Theodore provides mobile at-home services for added convenience.</p>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="images/personal_portfolio.png">
+                        <div class="layer">
+                            <h3>My Portfolio(This page)</h3>
+                            <p>A responsive and visually appealing portfolio website built with HTML, CSS, and
+                                JavaScript. It showcases my skills, certifications, projects, and contact details,
+                                providing a professional online presence.</p>
                         </div>
                     </div>
                 </div>
