--- a/index.html
+++ b/index.html
@@ -168,33 +168,50 @@
                 <h1 class="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="images/Isabella MON - Portfolio - Google Chrome 2025_02_17 10_24_41.png">
+                        <img src="images/Coursera-Portfolio.png">
                         <div class="layer">
                             <h3>Coursera Portfolio</h3>
-                            <p>This is the first ever portfolio i did on Coursera before completing the Web Dev course.
+                            <p>This is the first ever portfolio I did on Coursera before completing the Web Dev course.
                             </p>
+                            <a href="https://github.com/Isamonyeseala/Coursera-Portfolio" target="_blank">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
                         </div>
                     </div>
+
                     <div class="work">
                         <img src="images/clubbraids.png">
                         <div class="layer">
                             <h3>ClubBraids by Theo</h3>
-                            <p>This is a school project that i did with 4 other members, ClubBraids by Theodore offers
-                                professional braiding services for women, men, and children, including box braids,
-                                cornrows, twists, and personalized styles. The business emphasizes hair health with
-                                consultations and high-quality products. In addition to serving walk-in clients,
-                                Theodore provides mobile at-home services for added convenience.</p>
+                            <p>A school project I did with 4 members. It offers professional braiding services.</p>
+                            <a href="https://durksie.github.io/UXD-PROJECT/index.html" target="_blank">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
                         </div>
                     </div>
+
                     <div class="work">
                         <img src="images/personal_portfolio.png">
                         <div class="layer">
-                            <h3>My Portfolio(This page)</h3>
-                            <p>A responsive and visually appealing portfolio website built with HTML, CSS, and
-                                JavaScript. It showcases my skills, certifications, projects, and contact details,
-                                providing a professional online presence.</p>
+                            <h3>My Portfolio (This Page)</h3>
+                            <p>A responsive portfolio website built with HTML, CSS, and JavaScript.</p>
+                            <a href="https://github.com/Isamonyeseala/Isabella-s-Personal-Portfolio" target="_blank">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
                         </div>
                     </div>
+                    <div class="work">
+                        <img src="images/ToDoList.jpg">
+                        <div class="layer">
+                            <h3>To-Do List</h3>
+                            <p>A simple task management web app built with Node.js, Express, MongoDB, and EJS. It
+                                categorizes tasks using the Eisenhower Matrix for better productivity.</p>
+                            <a href="https://todolist-1-7lje.onrender.com/" target="_blank">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
