--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p><span>Web Developer</span></p>
+                <p><span>Front End Developer</span></p>
                 <h1>Hello👋, Welcome<br>My name is <span>ISABELLA</span></h1>
             </div>
         </div>
