--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About</h1>
-                    <p>I am a recent IT graduate (NQF Level 7) from the Vaal University of Technology with a strong
-                        focus on web development. Skilled in HTML, CSS, and JavaScript, I have hands-on experience
-                        building and designing user-friendly web applications. My expertise is further supported by a
-                        prestigious job shadowing program at Roche South Africa. Additionally, I have knowledge in cloud
-                        computing and networking, allowing me to develop scalable and efficient solutions. Known for a
-                        proactive mindset, strong problem-solving abilities, and a commitment to continuous learning, I
-                        am eager to contribute to innovative projects and grow in dynamic environments.</p>
+                    <p>I currently hold an Advanced Diploma In Information Technology(2024) majored in Software Development, 
+                        Web Development and Business Analysis during my diploma(2023). Skilled mainly in Web Development using 
+                        HTML, CSS and JavaScript. Earned hands-on experience through a prestigious job shadowing as a TechnoGirl 
+                        at Roche, South Africa. Known for a proactive mindset, exceptional problem-solving abilities, and a 
+                        commitment to personal and professional growth. Eager to contribute to innovative projects and thrive in 
+                        dynamic environments.
+</p>
 
                     <div class="tab-titles">
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
