--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                         HTML, CSS and JavaScript. Earned hands-on experience through a prestigious job shadowing as a TechnoGirl 
                         at Roche, South Africa. Known for a proactive mindset, exceptional problem-solving abilities, and a 
                         commitment to personal and professional growth. Eager to contribute to innovative projects and thrive in 
-                        dynamic environments.
-</p>
+                        dynamic environments.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
