--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div id="header">
         <div class="container">
             <nav>
+                <a href="/">
                 <img src="images/logo4.png" class="logo">
+            </a>
                 <ul id="sidemenu">
                     <li><a href='#header'>Home</a> </li>
                     <li><a href='#about'>About</a> </li>
