--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <a href="/">
+                <a href="#header">
                 <img src="images/logo4.png" class="logo">
             </a>
                 <ul id="sidemenu">
