--- a/index.html
+++ b/index.html
@@ -93,75 +93,38 @@
         </div>
     </div>
     <!-----------------Skills----------------->
-    <div id="skills">
-        <h1 class="sub-title">Skills</h1>
-        <div style="clear:both;"></div>
-
-        <div class="all_skills">
-            <div class="skill">
-                <img src="images/html.avif">
-                <h6>html</h6>
+    <!-- Skills Section -->
+<section id="skills">
+    <div class="container">
+        <h1 class="sub-title">My Skills & Certifications</h1>
+        <div class="skills-list">
+            <div class="skill-card">
+                <img src="images/html.avif" alt="HTML">
+                <h3>HTML</h3>
+                <a href="https://www.credly.com/earner/earned/badge/3d2c24bd-d8cf-491e-81f5-cd6eddd30dcd" target="_blank">View Certificate</a>
             </div>
 
-            <div class="skill">
-                <img src="images/css.jpg">
-                <h6>css</h6>
+            <div class="skill-card">
+                <img src="images/css.jpg" alt="CSS">
+                <h3>CSS</h3>
+                <a href="https://www.credly.com/earner/earned/badge/3d2c24bd-d8cf-491e-81f5-cd6eddd30dcd" target="_blank">View Certificate</a>
             </div>
 
-            <div class="skill">
-                <img src="images/javascript.jpg">
-                <h6>JavaScript</h6>
+            <div class="skill-card">
+                <img src="images/javascript.jpg" alt="JavaScript">
+                <h3>JavaScript</h3>
+                <a href="https://www.credly.com/badges/34970806-6e50-4cf3-bebf-936eb7536e1f/academic_transcript" target="_blank">View Certificate</a>
             </div>
 
-            <div class="skill">
-                <img src="images/communication.png">
-                <h6>Excellent Communication</h6>
-            </div>
-            <div class="skill">
-                <img src="images/AI.png">
-                <h6>Artificial Intelligence</h6>
-            </div>
-            <div class="skill">
-                <img src="images/awsSecurity.png">
-                <h6>AWS Educate Getting Started with Security</h6>
-            </div>
-            <div class="skill">
-                <img src="images/webDev.png">
-                <h6>Web Development with HTML, CSS, JavaScript Essentials</h6>
-            </div>
-            <div class="skill">
-                <img src="images/CCNAintroductiontonetworks.png">
-                <h6>CCNA: Introduction to Networks</h6>
-            </div>
-            <div class="skill">
-                <img src="images/Intro2PT.png">
-                <h6>Introduction to Packet Tracer</h6>
-            </div>
-            <div class="skill">
-                <img src="images/DateScience.png">
-                <h6>Data Science Tools</h6>
-            </div>
-            <div class="skill">
-                <img src="images/MachineLearning.png">
-                <h6>AWS Educate Machine Learning Foundations</h6>
-            </div>
-            <div class="skill">
-                <img src="images/ITessentials.png">
-                <h6>IT Essentials</h6>
-            </div>
-            <div class="skill">
-                <img src="images/ChatBot.png">
-                <h6>Chatbot Building Essentials</h6>
-            </div>
-            <div class="skill">
-                <img src="images/WebBuilder.png">
-                <h6>AWS Educate Web Builder</h6>
-            </div>
-            <div class="skill">
-                <img src="images/CyberSec.png">
-                <h6>Cybersecurity Fundamentals</h6>
+            <div class="skill-card">
+                <img src="images/ChatBot.png" alt="AWS Security">
+                <h3>AWS Security</h3>
+                <a href="https://www.credly.com/badges/a6152ef2-2520-4265-994a-e042035d7f83/academic_transcript" target="_blank">View Certificate</a>
             </div>
         </div>
+    </div>
+</section>
+
 
         <!----------------projects------------>
         <div id="projects">
