--- a/index.html
+++ b/index.html
@@ -175,6 +175,17 @@
                             </a>
                         </div>
                     </div>
+    <div>
+<div class="work">
+                        <img src="images/Movie-App.png">
+                        <div class="layer">
+                            <h3>Movie Database</h3>
+                            <p>This is a movie database system that was a group project. Created using Javascript, HTML and CSS.</p>
+                            <a href="https://todolist-1-7lje.onrender.com/" target="_blank">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>
+    </div>
 
                 </div>
             </div>
