--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                 <a href="https://www.credly.com/badges/a6152ef2-2520-4265-994a-e042035d7f83/academic_transcript" target="_blank">View Certificate</a>
             </div>
         </div>
+        <div class="view-transcript">
+            <a href="images/academic_transcript20250811-31-qm361i.pdf" target="_blank" class="btn">View Full Transcript</a>
+        </div>
     </div>
 </section>
 
