--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+<div id="preloader" class="fade-out">
+  <img src="images/Letter_B.webp" alt="Loading...">
+</div>
+<!-- Animated Background -->
+<div class="background-animated">
+  <img src="images/Letter_B.webp" class="My-Name" style="left: 10%; animation-delay: 0s; animation-duration: 30s;">
+  <img src="images/Letter_E.jpg" class="My-Name" style="left: 30%; animation-delay: 3s; animation-duration: 32s;">
+  <img src="images/Letter_L.png" class="My-Name" style="left: 50%; animation-delay: 6s; animation-duration: 35s;">
+  <img src="images/Letter_L.png" class="My-Name" style="left: 70%; animation-delay: 1.5s; animation-duration: 31s;">
+  <img src="images/Letter_A.png" class="My-Name" style="left: 85%; animation-delay: 2s; animation-duration: 34s;">
+</div>
     <div id="header">
         <div class="container">
             <nav>
