--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                     <div class="contact">
                         <h1 class="sub-title">Contact Me</h1>
                         <form name="submit-to-google-sheet">
-                            <input type="text" name="Name" placeholder="Your Name" required>
-                            <input type="email" name="Email" placeholder="Your Email" required>
+                            <input type="text" name="name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
                             <textarea name="Message" rows="2" placeholder="Your Message"></textarea>
                             <button type="submit" class="btn btn2">Submit</button>
                         </form>
