--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <form name="submit-to-google-sheet">
                             <input type="text" name="name" placeholder="Your Name" required>
                             <input type="email" name="email" placeholder="Your Email" required>
-                            <textarea name="Message" rows="2" placeholder="Your Message"></textarea>
+                            <textarea name="message" rows="2" placeholder="Your Message"></textarea>
                             <button type="submit" class="btn btn2">Submit</button>
                         </form>
                         <span id="msg"></span>
